--- a/codbex-lead-customer-ext/gen/customer-opportunity-generate/forms/customer-opportunity-generate/index.html
+++ b/codbex-lead-customer-ext/gen/customer-opportunity-generate/forms/customer-opportunity-generate/index.html
@@ -18,32 +18,32 @@
 
 			<h5 fd-title header-size="4">Convert Lead to Opportunity</h5>
 			<fd-form-item horizontal="false">
-				<fd-form-label dg-colon="true" dg-required="true" for="opportunity-amount">Opportunity Amount</fd-form-label>
-				<fd-step-input dg-id="opportunity-amount" name="opportunity-amount" ng-model="model.amount" dg-required="true" dg-min="0.0"
-					dg-max="1.0E11" dg-step="1.0" state="{{ !forms.form['opportunity-amount'].$valid ? 'error' : '' }}" compact="false">
+				<fd-form-label dg-colon="true" dg-required="true" for="amount">Amount</fd-form-label>
+				<fd-step-input dg-id="amount" name="amount" ng-model="model.amount" dg-required="true" dg-min="0.0"
+					dg-max="1.0E11" dg-step="1.0" state="{{ !forms.form['amount'].$valid ? 'error' : '' }}" compact="false">
 				</fd-step-input>
 			</fd-form-item>
 			<fd-form-item horizontal="false">
-				<fd-form-label dg-colon="true" dg-required="true" for="opportunity-currency">Opportunity Currency</fd-form-label>
-				<fd-select dg-id="opportunity-currency" name="opportunity-currency" label-id="opportunity-currency" compact="false" ng-required="true" ng-model="model.currency">
+				<fd-form-label dg-colon="true" dg-required="true" for="currency">Currency</fd-form-label>
+				<fd-select dg-id="currency" name="currency" label-id="currency" compact="false" ng-required="true" ng-model="model.currency">
 					<fd-option text="{{ option.Code }}" value="option.Id" ng-repeat="option in  track by $index"></fd-option>
 				</fd-select>
 			</fd-form-item>
 			<fd-form-item horizontal="false">
-				<fd-form-label dg-colon="true" dg-required="false" for="opportunity-type">Opportunity Type</fd-form-label>
-				<fd-select dg-id="opportunity-type" name="opportunity-type" label-id="opportunity-type" compact="false" ng-required="false" ng-model="model.opportunityType">
+				<fd-form-label dg-colon="true" dg-required="false" for="type">Type</fd-form-label>
+				<fd-select dg-id="type" name="type" label-id="type" compact="false" ng-required="false" ng-model="model.type">
 					<fd-option text="{{ option.label }}" value="option.value" ng-repeat="option in  track by $index"></fd-option>
 				</fd-select>
 			</fd-form-item>
 			<fd-form-item horizontal="false">
-				<fd-form-label dg-colon="true" dg-required="false" for="opportunity-priority">Opportunity Priority</fd-form-label>
-				<fd-select dg-id="opportunity-priority" name="opportunity-priority" label-id="opportunity-priority" compact="false" ng-required="false" ng-model="model.opportunityPriority">
+				<fd-form-label dg-colon="true" dg-required="false" for="priority">Priority</fd-form-label>
+				<fd-select dg-id="priority" name="priority" label-id="priority" compact="false" ng-required="false" ng-model="model.Priority">
 					<fd-option text="{{ option.label }}" value="option.value" ng-repeat="option in  track by $index"></fd-option>
 				</fd-select>
 			</fd-form-item>
 			<fd-form-item horizontal="false">
-				<fd-form-label dg-colon="true" dg-required="false" for="opportunity-propability">Opportunity Propability</fd-form-label>
-				<fd-select dg-id="opportunity-propability" name="opportunity-propability" label-id="opportunity-propability" compact="false" ng-required="false" ng-model="model.opportunityProbability">
+				<fd-form-label dg-colon="true" dg-required="false" for="propability">Propability</fd-form-label>
+				<fd-select dg-id="propability" name="propability" label-id="propability" compact="false" ng-required="false" ng-model="model.Probability">
 					<fd-option text="{{ option.label }}" value="option.value" ng-repeat="option in  track by $index"></fd-option>
 				</fd-select>
 			</fd-form-item>
