--- a/codbex-lead-customer-ext/gen/customer-opportunity-generate/forms/customer-opportunity-generate/index.html
+++ b/codbex-lead-customer-ext/gen/customer-opportunity-generate/forms/customer-opportunity-generate/index.html
@@ -26,33 +26,33 @@
 			<fd-form-item horizontal="false">
 				<fd-form-label dg-colon="true" dg-required="true" for="currency">Currency</fd-form-label>
 				<fd-select dg-id="currency" name="currency" label-id="currency" compact="false" ng-required="true" ng-model="model.currency">
-					<fd-option text="{{ option.Code }}" value="option.Id" ng-repeat="option in  track by $index"></fd-option>
+					<fd-option text="{{ option.Code }}" value="option.Id" ng-repeat="option in dropdownData.Currencies track by $index"></fd-option>
 				</fd-select>
 			</fd-form-item>
 			<fd-form-item horizontal="false">
 				<fd-form-label dg-colon="true" dg-required="false" for="type">Type</fd-form-label>
 				<fd-select dg-id="type" name="type" label-id="type" compact="false" ng-required="false" ng-model="model.type">
-					<fd-option text="{{ option.label }}" value="option.value" ng-repeat="option in  track by $index"></fd-option>
+					<fd-option text="{{ option.Name }}" value="option.Id" ng-repeat="option in dropdownData.OpportunityTypes track by $index"></fd-option>
 				</fd-select>
 			</fd-form-item>
 			<fd-form-item horizontal="false">
 				<fd-form-label dg-colon="true" dg-required="false" for="priority">Priority</fd-form-label>
-				<fd-select dg-id="priority" name="priority" label-id="priority" compact="false" ng-required="false" ng-model="model.Priority">
-					<fd-option text="{{ option.label }}" value="option.value" ng-repeat="option in  track by $index"></fd-option>
+				<fd-select dg-id="priority" name="priority" label-id="priority" compact="false" ng-required="false" ng-model="model.priority">
+					<fd-option text="{{ option.Name }}" value="option.Id" ng-repeat="option in dropdownData.OpportunityPriorities track by $index"></fd-option>
 				</fd-select>
 			</fd-form-item>
 			<fd-form-item horizontal="false">
 				<fd-form-label dg-colon="true" dg-required="false" for="propability">Propability</fd-form-label>
-				<fd-select dg-id="propability" name="propability" label-id="propability" compact="false" ng-required="false" ng-model="model.Probability">
-					<fd-option text="{{ option.label }}" value="option.value" ng-repeat="option in  track by $index"></fd-option>
+				<fd-select dg-id="propability" name="propability" label-id="propability" compact="false" ng-required="false" ng-model="model.probability">
+					<fd-option text="{{ option.Name }}" value="option.Id" ng-repeat="option in dropdownData.OpportunityProbabilities track by $index"></fd-option>
 				</fd-select>
 			</fd-form-item>
 <div class=" dg-hbox dg-box--gap dg-box--stretch-items">
 			<div>
-				<fd-button class="dg-full-width" type="submit" dg-label="Convert" compact="false" dg-type="positive"></fd-button>
+				<fd-button class="dg-full-width" type="submit" dg-label="Convert" compact="false" dg-type="positive" ng-click="convertOpportunity()"></fd-button>
 			</div>
 			<div>
-				<fd-button class="dg-full-width" type="submit" dg-label="Cancel" compact="false" dg-type="negative" ng-click="closeDialog()"></fd-button>
+				<fd-button class="dg-full-width"  dg-label="Cancel" compact="false" dg-type="negative" ng-click="closeDialog()"></fd-button>
 			</div>
 </div>
 
