--- a/codbex-lead-customer-ext/gen/customer-opportunity-generate/forms/customer-opportunity-generate/index.html
+++ b/codbex-lead-customer-ext/gen/customer-opportunity-generate/forms/customer-opportunity-generate/index.html
@@ -20,7 +20,7 @@
 			<fd-form-item horizontal="false">
 				<fd-form-label dg-colon="true" dg-required="true" for="amount">Amount</fd-form-label>
 				<fd-step-input dg-id="amount" name="amount" ng-model="model.amount" dg-required="true" dg-min="0.0"
-					dg-max="1.0E11" dg-step="1.0" state="{{ !forms.form['amount'].$valid ? 'error' : '' }}" compact="false">
+					dg-max="1.0E11" dg-step="1.0" state="{{ !forms.form['amount'].$valid ? 'error' : '' }}" compact="true">
 				</fd-step-input>
 			</fd-form-item>
 			<fd-form-item horizontal="false">
